--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.9"
+    "express-openid-connect": "^2.15.0",
+    "express-session": "^1.17.3",
+    "node-fetch": "^2.6.9",
+    "passport": "^0.6.0",
+    "passport-auth0": "^1.4.3"
   }
 }
