--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node-fetch": "^2.6.9",
     "passport": "^0.6.0",
     "passport-auth0": "^1.4.3",
+    "poe-node-api": "^0.0.5",
     "tailwindcss-labeled-groups": "^0.0.2"
   },
   "scripts": {
