--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.1.3",
+    "@keyv/mysql": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-openid-connect": "^2.15.0",
     "express-session": "^1.17.3",
