--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google-cloud/vertexai": "^0.2.1",
     "@google/generative-ai": "^0.1.3",
     "@keyv/mysql": "^1.7.2",
     "cors": "^2.8.5",
